--- a/resources/layout.css
+++ b/resources/layout.css
@@ -1,6 +1,6 @@
 /*
  * Add your CSS styles here
- * 
+ *
  */
 
 body {
@@ -37,11 +37,16 @@ a:hover {
 
 #nav {
 	margin: 0 20px 0 0;
+	float: left;
+
   /* CHALLENGE 3: how could you get this to float to the left side of the screen? */
 }
 
-#main {
+.main {
 	margin: 0;
+	border-left: 1px solid purple;
+	float: right;
+
   /*  CHALLENGE 3: how could you get this to float to the left side of the screen? */
   /* CHALLENGE 2: how could you give this element a one-pixel border down its left side? */
 }
